--- a/styles/style.css
+++ b/styles/style.css
@@ -26,3 +26,28 @@ body {
   width: 100%;
   position: fixed;
 }
+
+@keyframes splashani {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash-icon {
+  background-color: var(--main-color);
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0px;
+  z-index: 1;
+  font-size: 120px;
+  animation: splashani 0.2s linear forwards;
+  animation-delay: 1s;
+}
