--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
 @import "components/openchat-component.css";
 @import "components/borderBox__component.css";
 @import "components/icon_span__component.css";
+@import "components/no-mobile.css";
 
 /* screens*/
 @import "screens/logIn.css";
