--- a/styles/screens/logIn.css
+++ b/styles/screens/logIn.css
@@ -1,7 +1,7 @@
 /*-----------------------------welcome CSS------------------------------------*/
 
 .welcomeHeader {
-  margin: 20% 0%;
+  margin: 100px 0px;
   display: flex;
   align-items: center;
   flex-direction: column;
